storage fix, product add with image
